# databricks-energy-copilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SETTLEMENT_BACKOFFICE_TEST_REPORT.md  STATUS.md  databricks.yml  deploy.sh  docker-compose.yml  post_deploy.sh  pyproject.toml  requirements-dev.txt  setup.py
.docs-archive/: DEPLOYMENT.md  PRD.md  USER_GUIDE.md  guide-back-office.md
.docs-archive/images/: data-serving-layers.mmd  deployment-flow.mmd  mermaid-config.json
.github/workflows/: ci.yml
agent/: __init__.py  copilot_agent.py  prompt_templates.py
agent/evaluation/: __init__.py  eval_dataset.py  run_evaluation.py
agent/rag/: __init__.py  index_documents.py
agent/tools/: __init__.py  analysis_tools.py  forecast_tools.py  market_data_tools.py  rag_tools.py
app/: .databricksignore  .gitignore  DNSP_PHASE_5B_FINAL_TEST_SUMMARY.txt  DNSP_PHASE_5B_STRUCTURE.txt  DNSP_PHASE_5B_TEST_REPORT.md  DNSP_QUICK_REFERENCE.txt  DNSP_TESTING_SUMMARY.txt  _spot_endpoints_2.py  app.yaml  main.py  requirements.txt
app/backend/: .env.example  Dockerfile  db.py  main.py  mock_data.py  requirements.txt
app/frontend/: .env.example  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
app/frontend/src/: App.tsx  index.css  main.tsx
app/frontend/src/api/: client.ts
app/frontend/src/hooks/: useDarkMode.ts  (+1 more)
app/routers/: _settlement_dispatch.py  aer_benchmarking.py  aer_compliance.py  aio_compliance.py  alerts.py  asset_health.py  asset_intelligence.py  auto_stubs.py  batch_bidding.py  batch_forecasting.py  batch_futures_hedging.py  battery.py  bidding.py  bushfire.py  capex_program.py  compliance.py  connections.py  copilot.py  curves.py  customer_experience.py  customer_harm.py  dapr.py  dapr_assembly.py  dashboards.py  deals.py  der.py  der_export.py  environmentals.py  fleet_electrification.py  gas.py  genie.py  health.py  home.py  hosting_capacity.py  large_load.py  live_data.py  market_briefs.py  network_assets.py  network_ops.py  network_planning.py  (+19 more)
docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PRD.md  USER_GUIDE.md  guide-front-office.md  guide-middle-office.md
docs-site/: astro.config.mjs
docs-site/.astro/: content-modules.mjs
docs/images/: bundle-architecture-config.json  bundle-architecture.mmd
models/: register_all_models.py
models/anomaly_detection/: evaluate.py  train.py
models/demand_forecast/: evaluate.py  train.py
models/price_forecast/: evaluate.py  feature_engineering.py  train.py
models/solar_forecast/: evaluate.py  train.py
models/wind_forecast/: evaluate.py  train.py
notebooks/: batch_scoring.py
pipelines/: 00_historical_backfill.py  01_nemweb_ingest.py  02_openelec_ingest.py  03_weather_ingest.py  04_market_notices_ingest.py  04_solar_ingest.py  05_forecast_pipeline.py  05_static_lookups.py  06_gas_data_ingest.py  06_market_summary.py  07_wem_ingest.py  08_data_quality_report.py  09_aer_tariff_ingest.py  09_dashboard_snapshot_generator.py  10_opennem_facility_timeseries.py  11_cer_lgc_ingest.py  11_grant_lakebase_perms.py  12_isp_data_ingest.py  12_recreate_synced_tables_continuous.py  13_sttm_gas_ingest.py  14_cer_lgc_weekly.py  15_dnsp_outage_ingest.py  16_aer_reliability_ingest.py  17_aer_enforcement_ingest.py  18_aer_compliance_calendar.py  19_esv_incidents_ingest.py  20_esv_regulations_ingest.py  21_aemo_procedures_ingest.py  30_asx_futures_ingest.py  nemweb_downloader.py
resources/: app.yml  experiments.yml  jobs.yml  model_serving.yml  pipelines.yml
setup/: 00_create_catalog.sql  01_create_schemas.sql  02_create_tables.py  02_create_tables.sql  02_create_tables_legacy.sql  03_setup_lakebase.sql  04_create_genie_spaces.py  05_create_alerts.sql  06_register_uc_functions.py  07_setup_monitoring.py  10_nem_simulator.py  11_historical_backfill.py  13_seed_deal_data.py  14_create_competitive_gap_tables.py  15_create_approval_tables.py  17_create_polish_tables.py  18_create_phase3_tables.py  19_seed_phase3_data.py  21_create_trading_signals_tables.py  22_create_network_tables.py  24_create_settlement_tables.py  25_create_wem_fetch_state.py  26_create_dnsp_tables.py  load_generator_registry.py
tests/: conftest.py  test_agent.py  test_backend.py  test_data_quality.py  test_models.py  test_pipelines.py
(+559 files in other folders)
