[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "energy-copilot"
version = "0.1.0"
description = "AI-powered AUS NEM market intelligence platform"
requires-python = ">=3.11"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "app/backend"]
markers = [
    "integration: Requires live Databricks (set ENERGY_COPILOT_INTEGRATION_TEST=1)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
    "ignore::DeprecationWarning:lightgbm",
    "ignore::DeprecationWarning:numpy",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by black
    "F821",   # undefined name — needed for spark / dbutils in notebook context
    "E402",   # module import not at top — many setup/pipeline scripts need sys.path tweaks first
    "E701",   # multiple statements on one line (colon) — generated/dense code
    "E702",   # multiple statements on one line (semicolon) — generated/dense code
    "E741",   # ambiguous variable name — l used intentionally in some places
    "F841",   # local variable assigned but never used — stubs/scaffolding code
]
exclude = [
    ".databricks",
    "app/frontend",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "app.backend.main"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agent.prompt_templates"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agent.tools.rag_tools"
ignore_errors = true

[[tool.mypy.overrides]]
module = "models.demand_forecast.train"
ignore_errors = true

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]
